Refactor Spark submission script and configuration for improved performance and security
- Updated spark_submit.sh to change environment variables and enhance security settings.
- Refactored SparkConfig to optimize serialization settings and improve Spark session management.
- Enhanced AdEventSparkStreamer for better batch processing and error handling, including adaptive query execution and optimized Kafka stream settings.
- Improved database interaction with efficient batch processing and error handling.